# hyperliquid-funding-carry

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: funding_carry.base.yaml  funding_carry.bulk.yaml  funding_carry.ingest.yaml  funding_carry.multi.yaml  funding_carry.multi_walkforward.yaml  funding_carry.real.yaml  funding_carry.sweep.yaml  funding_carry.walkforward.yaml
data/raw/: sample_asset_context.csv  sample_candles.csv  sample_execution_1m.csv  sample_execution_5m.csv  sample_funding.csv
data/raw/hyperliquid_fixture/: btc_asset_context.json  btc_candles.json  btc_execution_1m.csv  btc_execution_5m.csv  btc_funding_history.json  btc_predicted_funding.json  eth_asset_context.csv  eth_candles.csv  eth_execution_1m.csv  eth_execution_5m.csv  eth_funding_history.csv  eth_predicted_funding.csv  hype_asset_context.csv  hype_candles.csv  hype_execution_1m.csv  hype_execution_5m.csv  hype_funding_history.csv  hype_predicted_funding.csv
docs/: 01_Funding_Carry_戦略設計.md  project_structure.md
scripts/: setup_uv.sh
src/hl_funding_carry/: __init__.py  __main__.py  settings.py  types.py
src/hl_funding_carry/backtest/: __init__.py  artifacts.py  attribution.py  events.py  execution.py  metrics.py  simulator.py
src/hl_funding_carry/data/: hyperliquid.py  ingestion.py  loaders.py  storage.py  validation.py
src/hl_funding_carry/experiments/: __init__.py  runner.py
src/hl_funding_carry/features/: funding.py
tests/: conftest.py  test_backtest.py  test_cli.py  test_data_ingestion.py  test_execution.py  test_features.py  test_runner.py  test_strategy.py
(+9 files in other folders)
