[project]
name = "hyperliquid-funding-carry"
version = "0.1.0"
description = "Research and backtesting scaffold for Hyperliquid funding carry strategy"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "pandas-stubs>=3.0.0.260204",
  "pyarrow>=18,<21",
  "pydantic>=2.9,<3",
  "pyyaml>=6.0.2,<7",
]

[dependency-groups]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6.0,<7",
  "ruff>=0.8,<1",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hl_funding_carry"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
